# kongcli

./: .dockerignore  .gitignore  .testenv  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.circleci/: config.yml
src/kongcli/: __init__.py  _cli.py  _consumers.py  _kong.py  _list.py  _plugins.py  _raw.py  _routes.py  _services.py  _session.py  _util.py
src/kongcli/kong/: _util.py  consumers.py  general.py  plugins.py
tests/: conftest.py  test.sh  test_cli.py  test_consumers.py  test_kong.py  test_kong_consumers.py  test_raw.py  test_services.py  test_session.py  test_util.py
tests/kong/: test_consumers.py  test_general.py  test_plugins.py
