[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "kongcli"
version = "0.1.0"
description = "Interact with kong's admin api."
authors = ["Tammo Ippen <tammo.ippen@posteo.de>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/tammoippen/kongcli"
homepage = "https://github.com/tammoippen/kongcli"
keywords=["kong", "api", "microservice", "terminal", "admin"]
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.scripts]
kongcli = 'kongcli._cli:cli'

[tool.poetry.dependencies]
python = "^3.6"

click = "^7.0"
pyfiglet = "^0.8.0"
requests = "^2.22"
tabulate = "^0.8.3"
loguru = "^0.2.5"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
flake8 = "^3.7"
flake8-bugbear = "^18.8"
flake8-commas = "^2.0"
flake8-comprehensions = "^2.0"
flake8-import-order = "^0.18.0"
flake8-pep3101 = "^1.2"
mypy = "^0.670.0"
pep8-naming = "^0.8.2"
psycopg2-binary = "^2.8"
pytest = "^4.3"
pytest-cov = "^2.6"
pytest-datadir = "^1.3"
pytest-flake8 = "^1.0"
pytest-mock = "^1.10"
pytest-pythonpath = "^0.7.3"
pytest-randomly = "^3.0"
