[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "kongcli"
version = "0.1.0"
description = "Interact with kong's admin api."
authors = ["Tammo Ippen <tammo.ippen@posteo.de>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/tammoippen/kongcli"
homepage = "https://github.com/tammoippen/kongcli"
keywords=["kong", "api", "microservice", "terminal", "admin"]
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.scripts]
kongcli = 'kongcli._cli:cli'

[tool.poetry.dependencies]
python = "^3.6"

cachetools = "^4.1"
click = "^7.1"
loguru = "^0.5"
orjson = "^3.3.0"
pyfiglet = "^0.8.0"
requests = "^2.24"
tabulate = "^0.8.3"

[tool.poetry.dev-dependencies]
black = "=19.10b0"
flake8 = "^3.7"
flake8-bugbear = "^20.1"
flake8-commas = "^2.0"
flake8-comprehensions = "^3.2"
flake8-import-order = "^0.18.0"
flake8-pep3101 = "^1.2"
flake8-print = "^3.1.4"
mypy = "^0.780"
pep8-naming = "^0.11.1"
psycopg2-binary = "^2.8"
pytest = "^6.0"
pytest-cov = "^2.6"
pytest-randomly = "^3.0"
pytest-sugar = "^0.9.2"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''
